inputs for edit fixes to reduce jumpyness

--- a/client/app/journeyedit/journeyedit.less
+++ b/client/app/journeyedit/journeyedit.less
@@ -37,3 +37,9 @@
 .step-time textarea:focus{
   height: 34px !important;
 }
+
+h2 input:focus{
+  height: 42px;
+  line-height: 34px;
+  padding-top: 0px;
+}
